# paperless-llm-workflows

./: CHANGELOG.md  Cargo.toml  README.md  openapi.json
.github/workflows/: rust.yml
distribution/docker/: Dockerfile
src/: benchmark.rs  config.rs  extract.rs  main.rs  requests.rs  server.rs  types.rs
